--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -15,6 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Cleanarchitecturebaemin">
+        <activity
+            android:name=".screen.main.home.restaurant.detail.RestaurantDetailActivity"
+            android:exported="false" />
         <activity
             android:name=".screen.mylocation.MyLocationActivity"
             android:exported="true" />
@@ -31,7 +33,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_map" />
-
     </application>
 
 </manifest>
