--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Cleanarchitecturebaemin">
+        android:theme="@style/Theme.Cleanarchitecturebaemin"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".screen.order.OrderMenuListActivity"
+            android:exported="false" />
         <activity
             android:name=".screen.main.home.restaurant.detail.RestaurantDetailActivity"
             android:exported="false" />
@@ -34,8 +37,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_map" />
-
-
     </application>
 
 </manifest>
