--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -20,6 +24,18 @@
             android:exported="false" />
         <activity
             android:name=".screen.main.home.restaurant.detail.RestaurantDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".screen.review.gallery.GalleryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".screen.review.AddRestaurantReviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".screen.review.photo.CameraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".screen.review.photo.ImagePreviewListActivity"
             android:exported="false" />
         <activity
             android:name=".screen.mylocation.MyLocationActivity"
