--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,9 @@ dependencies {
     // Circle Indicator
     implementation 'me.relex:circleindicator:2.1.6'
 
+    // Unit Test
+    testImplementation "org.koin:koin-test:2.1.5"
+    testImplementation 'org.mockito:mockito-inline:3.4.0'
+    testImplementation "android.arch.core:core-testing:1.1.1"
+
 }
